k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: flask
  name: flask
  namespace: counter-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      run: flask
  template:
    metadata:
      labels:
        run: flask
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      containers:
      - image: eu.gcr.io/kainight/flask:v1.1
        name: flask
        livenessProbe:
          httpGet:
            path: /health/live
            port: 5000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5000
        resources:
          requests:
            memory: 356Mi
            cpu: 200m
          limits:
            memory: 612Mi
            cpu: 600m
      imagePullSecrets:
        - name: gcr-secret        
status: {}
