k8s/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: flask
  name: flask
  namespace: counter-flask
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: flask
  type: ClusterIP
status:
  loadBalancer: {}
