k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: keepcoding-35-187-171-203.nip.io
    http:
      paths:
      - backend:
          serviceName: flask
          servicePort: 5000
